test/files/neg/macro-bundle-class.check
macro-bundle-class.scala:10: error: macro bundles must be monomorphic traits extending scala.reflect.macros.Macro and not implementing its `val c: Context` member
  def foo = macro Bundle.impl
      ^
one error found
